--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Javascript Sandbox: Section 2</h1>
+    <!-- <div style="margin-top: 1000px;"></div> -->
     <script src="app.js"></script>
   </body>
 </html>
