--- a/bootstrap-learning/looplab/index.html
+++ b/bootstrap-learning/looplab/index.html
@@ -51,7 +51,7 @@
       <div class="dark-overlay">
         <div class="home-inner container">
           <div class="row">
-            <div class="col-lg-8 d-lg-block">
+            <div class="col-lg-8 d-none d-lg-block">
               <h1 class="display-4">
                 Build <strong>social profiles</strong> and gain revenue
                 <strong>profits</strong>
@@ -133,6 +133,65 @@
         </div>
       </div>
     </header>
+
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+              distinctio doloribus quas autem amet. Porro ad perferendis at,
+              quam optio tempora quasi corporis deserunt corrupti explicabo aut
+              maxime, laborum veritatis.
+            </p>
+            <a href="#" class="btn btn-outline-secondary">Find out more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+    <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/explore-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus sit amet aliquid molestiae quidem placeat aperiam
+              deserunt mollitia velit. Provident!
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
