--- a/bootstrap-learning/looplab/index.html
+++ b/bootstrap-learning/looplab/index.html
@@ -193,6 +193,124 @@
       </div>
     </section>
 
+    <!-- CREATE HEAD -->
+    <section id="create-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Create</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+              distinctio doloribus quas autem amet. Porro ad perferendis at,
+              quam optio tempora quasi corporis deserunt corrupti explicabo aut
+              maxime, laborum veritatis.
+            </p>
+            <a href="#" class="btn btn-outline-light">Find out more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE SECTION -->
+    <section id="create-section" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 order-2">
+            <img
+              src="img/create-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6 order-1">
+            <h3>Create Your Passion</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus sit amet aliquid molestiae quidem placeat aperiam
+              deserunt mollitia velit. Provident!
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE HEAD -->
+    <section id="share-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Share</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+              distinctio doloribus quas autem amet. Porro ad perferendis at,
+              quam optio tempora quasi corporis deserunt corrupti explicabo aut
+              maxime, laborum veritatis.
+            </p>
+            <a href="#" class="btn btn-outline-light">Find out more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <section id="share-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/share-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Share What You Create</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus sit amet aliquid molestiae quidem placeat aperiam
+              deserunt mollitia velit. Provident!
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                fugit perspiciatis doloremque! Amet, rerum laudantium.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
