--- a/bootstrap-learning/mizuxe/index.html
+++ b/bootstrap-learning/mizuxe/index.html
@@ -155,6 +155,107 @@
       </div>
     </section>
 
+    <!-- ABOUT / WHY SECTION -->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">
+                Why This Book?
+              </h1>
+              <p class="lead pb-3">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
+                incidunt! Excepturi quae suscipit voluptatibus quibusdam!
+              </p>
+            </div>
+            <!-- ACCORDION -->
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+
+                  </div>
+                    <div id="collapse1" class="collapse show">
+                      <div class="card-body">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Recusandae sapiente tenetur, at quia sequi
+                        voluptatibus maxime nobis vero odio ducimus et,
+                        blanditiis placeat necessitatibus tempora labore
+                        quibusdam sint distinctio tempore animi voluptatum
+                        aliquid. Commodi ullam aspernatur labore ratione nihil
+                        aliquid ducimus porro, tenetur ipsam? Ratione accusamus
+                        ducimus labore dolorum rerum.
+                      </div>
+                    </div>
+                  </h5>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain The
+                      Knowledge
+                    </div>
+                  </div>
+
+                    <div id="collapse2" class="collapse">
+                      <div class="card-body">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Recusandae sapiente tenetur, at quia sequi
+                        voluptatibus maxime nobis vero odio ducimus et,
+                        blanditiis placeat necessitatibus tempora labore
+                        quibusdam sint distinctio tempore animi voluptatum
+                        aliquid. Commodi ullam aspernatur labore ratione nihil
+                        aliquid ducimus porro, tenetur ipsam? Ratione accusamus
+                        ducimus labore dolorum rerum.
+                      </div>
+                    </div>
+                  </h5>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse3"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                    </div>
+
+                </div>
+                <div id="collapse3" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Recusandae sapiente tenetur, at quia sequi
+                    voluptatibus maxime nobis vero odio ducimus et,
+                    blanditiis placeat necessitatibus tempora labore
+                    quibusdam sint distinctio tempore animi voluptatum
+                    aliquid. Commodi ullam aspernatur labore ratione nihil
+                    aliquid ducimus porro, tenetur ipsam? Ratione accusamus
+                    ducimus labore dolorum rerum.
+                  </div>
+                </div>
+                  </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
