--- a/bootstrap-learning/glozzom/index.html
+++ b/bootstrap-learning/glozzom/index.html
@@ -109,6 +109,79 @@
       </div>
     </section>
 
+    <!-- HOME ICON SECTION -->
+    <section id="home-icons" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cog fa-3x mb-2"></i>
+            <h3>Turning Gears</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Provident, distinctio.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cloud fa-3x mb-2"></i>
+            <h3>Sending Data</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Provident, distinctio.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cart-plus fa-3x mb-2"></i>
+            <h3>Making Money</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Provident, distinctio.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center"></div>
+          <div class="col-md-4 mb-4 text-center"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOME HEADING SECTION -->
+    <section id="home-heading" class="p-5">
+      <div class="dark-overlay">
+        <div class="row">
+          <div class="col">
+            <div class="container pt-5">
+              <h1>Are You Ready To Get Started?</h1>
+              <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                laudantium mollitia rerum eius nulla a?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- INFO SECTION -->
+    <section id="info" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-self-center">
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
+              quod saepe doloremque beatae dolor itaque culpa alias dolores esse
+              repellat.
+            </p>
+            <a href="about.html" class="btn btn-outline-danger btn-lg"
+              >Learn More</a
+            >
+          </div>
+          <div class="col-md-6">
+            <img src="img/laptop.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -127,6 +200,12 @@
     <script>
       // Get the current year of the copyright
       $("#year").text(new Date().getFullYear());
+
+      // Configure Slider
+      $(".carousel").carousel({
+        interval: 6000,
+        pause: "hover",
+      });
     </script>
   </body>
 </html>
