--- a/bootstrap-learning/portfoligrid/index.html
+++ b/bootstrap-learning/portfoligrid/index.html
@@ -99,6 +99,57 @@
           </div>
         </div>
       </header>
+
+      <!-- HOME -->
+      <div id="home" class="collapse show">
+        <div class="card card-body bg-primary text-white py-5">
+          <h2>Welcome To My Page</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum,
+            odio.
+          </p>
+        </div>
+
+        <div class="card card-body py-5">
+          <h3>My Skills</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+            ratione totam temporibus dicta, incidunt culpa.
+          </p>
+          <hr />
+          <h4>HTML 5</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 100%;"></div>
+          </div>
+          <h4>CSS 3</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 100%;"></div>
+          </div>
+          <h4>Javascript</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 90%;"></div>
+          </div>
+          <h4>PHP</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 80%;"></div>
+          </div>
+          <h4>Python</h4>
+          <div class="progress mb-3">
+            <div class="progress-bar bg-success" style="width: 70%;"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- FOOTER -->
+      <footer id="main-footer" class="p-5 bg-dark text-white">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#" class="btn btn-outline-light">
+              <i class="fas fa-cloud"></i> Download Resume
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script
