--- a/loancalculator/index.html
+++ b/loancalculator/index.html
@@ -16,7 +16,12 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <style>
+      #loading,
+      #results {
+        display: none;
+      }
+    </style>
   </head>
   <body class="bg-dark">
     <div class="container">
@@ -68,9 +73,9 @@
               </div>
             </form>
             <!-- LOADER HERE -->
-            <!-- <div id="loading">
+            <div id="loading">
               <img src="img/loading.gif" alt="" />
-            </div> -->
+            </div>
             <!-- RESULTS -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
