--- a/numberguesser/index.html
+++ b/numberguesser/index.html
@@ -16,7 +16,7 @@
       <h1>Number Guesser</h1>
       <div id="game">
         <p>
-          Guess a number between <span className="min-num">1</span> and
+          Guess a number between <span class="min-num">1</span> and
           <span class="max-num">10</span>
         </p>
         <input
@@ -24,7 +24,7 @@
           id="guess-input"
           placeholder="Enter your guess..."
         />
-        <input type="submit" value="Submit" id="guess-value" />
+        <input type="submit" value="Submit" id="guess-btn" />
         <p class="message"></p>
       </div>
     </div>
