--- a/js_sandbox/asynchronous_AJAX&FetchAPI/7-8-project-files/index.html
+++ b/js_sandbox/asynchronous_AJAX&FetchAPI/7-8-project-files/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript Sandbox: Section 5</title>
+  <title>EasyHTTP Example</title>
 </head>
 <body>
-  <h1>JavaScript Sandbox: Section 5</h1>
+  <h1>EasyHTTP Example</h1>
 
+  <script src="easyhttp.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
