delete & clear items

--- a/Tracalorie/index.html
+++ b/Tracalorie/index.html
@@ -18,7 +18,7 @@
           <a href="#" class="brand-logo center">Tracalorie</a>
           <ul class="right">
             <li>
-              <a href="#" class="clar-btn btn blue lighten-3">Clear All</a>
+              <a href="#" class="clear-btn btn blue lighten-3">Clear All</a>
             </li>
           </ul>
         </div>
